--- a/index.html
+++ b/index.html
@@ -3,26 +3,11 @@
 
 <head>
 
-  <!-- ======= Start Google Tag Manager ======= -->
-
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-5BB8W2X');</script>
-
-  <!-- ======= End Google Tag Manager ======= -->
-
-
-
   <link rel="icon" type="image/png" href="assets/img/logo.png"/>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>My Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
 
 
   <!-- Google Fonts -->
@@ -46,20 +31,6 @@
 
   <link href="assets/css/style.css" rel="stylesheet">
 
-
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169007209-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-169007209-3');
-  </script>
-
-
-
   <!-- =======================================================
   * Template Name: Personal - v2.1.0
   * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
@@ -73,14 +44,6 @@
 
 <body>
   
-  <!-- ======= Start Google Tag Manager (noscript) ======= -->
-
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  
-  <!-- ======= End Google Tag Manager (noscript) ======= -->
-
-
   
   <!--
   <img class="background-image" src="assets/img/background/tunnel_slowmo.gif" />
@@ -92,7 +55,7 @@
   
   <header id="header" class="header-tops">
     <div class="container">
-      <h1><a href="index.html">Aras Güngöre</a></h1>
+      <h1><a href="index.html">Tester Name</a></h1>
       <h2 style="color:#fff">I am <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -133,7 +96,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
-            Hi there, my name is Aras Güngöre.<br><br>
+            Hi there, my name is Tester.<br><br>
 
             I'm a graduate of Boğaziçi University with a bachelor's degree in Electrical and Electronics Engineering and a minor
             degree in Computer Engineering. My academic journey seamlessly integrates these fields, providing me with a strong
@@ -378,27 +341,7 @@
               </li>
             </ul>
           </div>
-          <!--
-          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://www.ankara.bel.tr/en/" target="_blank"><img src="assets/img/experience/abb_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="https://www.ankara.bel.tr/en/" target="_blank" style="color:#12d640">Ankara Metropolitan Municipality</a><br> </h4>
-            <h5 style="text-align:left;"><em>SCADA Engineering Intern</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>August 2021 - September 2021, Internship</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Ankara, Turkey</em></span><br><br>
-            <ul style="text-align:left;">
-              <li>
-                Designed GSM/GPRS&#8209;based electrical control panels that are connected to local water pump automation systems.
-                Pump station panels use digital output data received from the SCADA control center via RF transmission to
-                control valves and pumps. Tank station panels are charged from the PV system and refill water tanks by signaling
-                the pump station panel when the float switch is activated.
-              </li>
-              <li>
-                Implemented motor control circuits by reading their PLC ladder diagrams and analyzed the EPLAN project
-                documentation, HMI, and hardware components of an RTU panel.
-              </li>
-            </ul>
-          </div>
-          -->
+        
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://www.meteksan.com/en/" target="_blank"><img src="assets/img/experience/meteksan_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
             <h4 style="text-align:left;"><a href="https://www.meteksan.com/en/" target="_blank" style="color:#12d640">Meteksan Defense Industry Inc.</a><br> </h4>
@@ -454,18 +397,7 @@
             <a href="https://github.com/arasgungore/butterworth-filter" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#12d640"><strong>Butterworth Filter</strong></h5></a>
             <p style="padding:0px 2px;color:#fff;">An LTspice project which contains third&#8209;order Butterworth filters built both using an inductor and a current conveyor.</p>
           </div>
-          <!--
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/arasgungore/chess-bot" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/word_game.jpg" class="img-fluid"></a>
-            <a href="https://github.com/arasgungore/chess-bot" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#12d640"><strong>Word Game</strong></h5></a>
-            <p style="padding:0px 2px;color:#fff;">A C++ project in which you can play the Turkish game show “Kelime Oyunu” (Word Game) on the terminal.</p>
-          </div>
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/arasgungore/rocket-flight-simulator" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets/img/projects/rocket_flight_simulator.jpg" class="img-fluid"></a>
-            <a href="https://github.com/arasgungore/rocket-flight-simulator" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#12d640"><strong>Rocket Flight Simulator</strong></h5></a>
-            <p style="padding:0px 2px;color:#fff;">A Simulink project which can accurately simulate the motion of a flying rocket in one&#8209;dimensional space.</p>
-          </div>
-          -->
+         
         </div>
       </div>
     </div>
@@ -770,7 +702,7 @@
 
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["a Developer", "an Engineer", "a Researcher"],
+      strings: ["a Learner","a Thinker", "a Builder","a Teacher"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
